Email configuration setup, updation of backend modules